--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,8 @@ local.properties
 .sts4-cache/
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse
+
+maven-wrapper.jar
+maven-wrapper*
+mvnw*
+.mvn
